force-app/main/default/objects/Invoice__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this Invoice is Active and is included in the Account summary</description>
    <inlineHelpText>If checked, this Invoice is Active and is included in the Account summary</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>