force-app/main/default/objects/Invoice__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <description>Sum of Active Invoice Lines (Roll-Up Summary)</description>
    <inlineHelpText>Sum of Active Invoice Lines (Roll-Up Summary)</inlineHelpText>
    <label>Invoice Amount</label>
    <summarizedField>Invoice_Line__c.Line_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>