force-app/main/default/objects/Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Invoice Date</description>
    <inlineHelpText>Date of this invoice - determines when the invoice is due for payment</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>