force-app/main/default/objects/Invoice__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <description>Tax Applied to this Invoice - Manually entered by the user</description>
    <inlineHelpText>Tax Applied to this Invoice - Manually entered by the user</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>